[package]
name = "rotor-persistent"
description = """
    The library that simplifies writing client protocols with persistent
    connections, auto-reconnecting, DNS resolving and refreshing of DNS
    records, and pluggable name services in future.
"""
license = "MIT/Apache-2.0"
readme = "README.rst"
keywords = ["mio", "cantal", "rotor", "metrics"]
homepage = "http://github.com/tailhook/rotor-persistent"
documentation = "http://tailhook.github.io/rotor-persistent"
version = "0.1.0"
authors = ["paul@colomiets.name"]

[dependencies]
rotor = "0.5.0"
void = "0.0.5"

[dev-dependencies]
argparse = "0.2.1"

[lib]
name = "rotor_persistent"
